--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,5 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>edu.cmu.lti.oaqa</groupId>
-    <artifactId>oaqa</artifactId>
-    <version>4</version>
-  </parent>
   <groupId>edu.cmu.lti.oaqa.pkb</groupId>
   <artifactId>pkb</artifactId>
   <version>0.0.1-SNAPSHOT</version>
@@ -66,4 +61,8 @@
       <version>2.0.7</version>
     </dependency>
   </dependencies>
+  <properties>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+  </properties>
 </project>
